src/objects/Hub_Foundation__c.object
<CustomObject>
    <description>Object to store foundation data for CMD Hub.</description>
    <fields>
        <fullName>Alpha_2_Code__c</fullName>
        <description>Alpha 2 Code issued by ISO-3166 Standard</description>
        <inlineHelpText>Alpha 2 Code issued by ISO-3166 Standard</inlineHelpText>
        <label>Alpha 2 Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alpha_3_Code__c</fullName>
        <description>Alpha 3 Code issued by ISO-3166 Standard</description>
        <inlineHelpText>Alpha 2 Code issued by ISO-3166 Standard</inlineHelpText>
        <label>Alpha 3 Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <formula>If( RecordType.DeveloperName = &apos;State_and_Country&apos;, Text(Country_of_the_State__r.Country__c) , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Åland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia, Plurinational State of</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_of_the_State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Country of the State</description>
        <inlineHelpText>Country of the State</inlineHelpText>
        <label>Country of the State</label>
        <referenceTo>Hub_Foundation__c</referenceTo>
        <relationshipLabel>Country_of_the_State</relationshipLabel>
        <relationshipName>Country_of_the_State</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AP - GC</fullName>
                </value>
                <value>
                    <fullName>AP - SAP</fullName>
                </value>
                <value>
                    <fullName>AM - AMEC</fullName>
                </value>
                <value>
                    <fullName>EU - EMEA</fullName>
                </value>
                <value>
                    <fullName>AP - JAPAN</fullName>
                </value>
                <value>
                    <fullName>AP - KOREA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <description>State Code</description>
        <inlineHelpText>State Code</inlineHelpText>
        <label>State Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State Name</description>
        <inlineHelpText>State Name</inlineHelpText>
        <label>State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Hub Foundation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Region__c</columns>
        <columns>Country__c</columns>
        <columns>Alpha_2_Code__c</columns>
        <columns>Alpha_3_Code__c</columns>
        <columns>Country_Name__c</columns>
        <columns>Country_of_the_State__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Country_and_Region</fullName>
        <columns>NAME</columns>
        <columns>Alpha_2_Code__c</columns>
        <columns>Alpha_3_Code__c</columns>
        <columns>Country__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Hub_Foundation__c.Country_and_Region</value>
        </filters>
        <label>Country and Region</label>
    </listViews>
    <listViews>
        <fullName>State_Country</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Country_Name__c</columns>
        <columns>State__c</columns>
        <columns>State_Code__c</columns>
        <columns>Country_of_the_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Hub_Foundation__c.State_and_Country</value>
        </filters>
        <label>State and Country</label>
    </listViews>
    <nameField>
        <displayFormat>FDI-{0000}</displayFormat>
        <label>Foundation Data Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hub Foundation</pluralLabel>
    <recordTypes>
        <fullName>Country_and_Region</fullName>
        <active>true</active>
        <description>ISO 3166 Standard Companies and its mapping with NXP Sales Regions</description>
        <label>Country and Region</label>
    </recordTypes>
    <recordTypes>
        <fullName>State_and_Country</fullName>
        <active>true</active>
        <description>States and its mapping with Countries</description>
        <label>State and Country</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Alpha2_Code_is_required</fullName>
        <active>true</active>
        <description>Alpha 2 Code is a required field.</description>
        <errorConditionFormula>AND
(
ISBLANK(TRIM(Alpha_2_Code__c )),
RecordType.DeveloperName = &quot;Country_and_Region&quot;
)</errorConditionFormula>
        <errorDisplayField>Alpha_2_Code__c</errorDisplayField>
        <errorMessage>Please fill the value of Alpha 2 Code.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Alpha3_Code_is_required</fullName>
        <active>true</active>
        <description>Alpha 3 Code is a required field.</description>
        <errorConditionFormula>AND
(
ISBLANK(TRIM(Alpha_3_Code__c )),
RecordType.DeveloperName = &quot;Country_and_Region&quot;
)</errorConditionFormula>
        <errorDisplayField>Alpha_3_Code__c</errorDisplayField>
        <errorMessage>Please fill the value of Alpha 3 Code.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Country_is_required</fullName>
        <active>true</active>
        <description>Country is a required field.</description>
        <errorConditionFormula>AND
(
ISBLANK(TRIM( TEXT( Country__c ))),
RecordType.DeveloperName = &quot;Country_and_Region&quot;
)</errorConditionFormula>
        <errorDisplayField>Country__c</errorDisplayField>
        <errorMessage>Please fill the value of Country.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Region_is_required</fullName>
        <active>true</active>
        <description>Region is a required field.</description>
        <errorConditionFormula>AND
(
ISBLANK(TRIM(TEXT(Region__c))) , 
RecordType.DeveloperName = &quot;Country_and_Region&quot;
)</errorConditionFormula>
        <errorDisplayField>Region__c</errorDisplayField>
        <errorMessage>Please fill the value of Region.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>State_Code_is_mandatory</fullName>
        <active>true</active>
        <description>State Code is mandatory</description>
        <errorConditionFormula>AND 
( 
ISBLANK(TRIM(   State_Code__c   )), 
RecordType.DeveloperName = &quot;State_and_Country&quot; 
)</errorConditionFormula>
        <errorDisplayField>State_Code__c</errorDisplayField>
        <errorMessage>State Code is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>State_is_mandatory</fullName>
        <active>true</active>
        <description>State is mandatory</description>
        <errorConditionFormula>AND 
( 
ISBLANK(TRIM(  State__c  )), 
RecordType.DeveloperName = &quot;State_and_Country&quot; 
)</errorConditionFormula>
        <errorDisplayField>State__c</errorDisplayField>
        <errorMessage>State is mandatory</errorMessage>
    </validationRules>
</CustomObject>